# Fenrirrr

./: README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
app_fenrir/: build.gradle  build.gradle.kts  proguard-rules.pro
app_fenrir/src/main/: AndroidManifest.xml
app_fenrir/src/main/res/color/: button_profile_text_color.xml  button_profile_tint.xml
app_fenrir/src/main/res/layout/: account_change_toast.xml  activity_camera_scan.xml  activity_captcha_legacy.xml  activity_delta_owner.xml  activity_gif_pager.xml  activity_key_exchange_commit.xml  activity_login.xml  activity_lottie.xml  activity_main.xml  activity_main_side.xml  activity_main_side_with_snow.xml  activity_main_with_profiles_selection.xml  activity_main_with_profiles_selection_side.xml  activity_main_with_snow.xml  activity_no_main.xml  activity_photo_pager.xml  activity_post_publish_prepare.xml  activity_shortvideo_pager.xml  activity_single_url_photo.xml  activity_story_pager.xml  activity_video.xml  activity_vkcaptcha.xml  alert_recycle_frame.xml  attachments_buttons_bar.xml  bottom_navigation_menu.xml  bottom_sheet_attachments.xml  bottom_sheet_attachments_edit.xml  button_add_photo.xml  content_community_settings_additional.xml  content_create_photo_album_step_3.xml  content_create_photo_album_step_4.xml  content_feed_mention.xml  content_post.xml  content_progress_button.xml  content_shortvideo_page.xml  custom_searchview.xml  dialog_direct_auth.xml  dialog_local_server_options.xml  dialog_selectable_text.xml  doc_upload_entry.xml  (+116 more)
app_fenrir/src/main/res/layout-land/: fragment_audio_player.xml
app_fenrir/src/main/res/menu/: menu_friends_tab.xml
app_fenrir/src/main/res/values/: attrs.xml  strings.xml  styles.xml
app_fenrir/src/main/res/values-night/: styles.xml
app_fenrir/src/main/res/values-night-v31/: styles.xml
app_fenrir/src/main/res/values-ru/: strings.xml
app_fenrir/src/main/res/values-v31/: styles.xml
app_fenrir/src/main/res/xml/: file_paths.xml  my_button_shape_state_list.xml
app_filegallery/: build.gradle  build.gradle.kts
app_filegallery/src/main/: AndroidManifest.xml
app_filegallery/src/main/res/drawable/: dir_icon.xml
app_filegallery/src/main/res/layout/: activity_camera_scan.xml  activity_crash_error.xml  activity_main.xml  activity_photo_pager.xml  bottom_navigation_menu.xml  custom_searchview.xml  dialog_bottomsheet_error.xml  doc_upload_entry.xml  fragment_create_pin.xml  fragment_file_explorer.xml  fragment_file_remote_explorer.xml  fragment_file_select_explorer.xml  fragment_local_media_server_tabs.xml  fragment_local_server_music.xml  fragment_local_server_photo.xml  fragment_local_server_video.xml  fragment_tag_dirs.xml  item_audio_local_server.xml  item_local_server_photo.xml  mini_player.xml  preference_file_gallery_list_fragment.xml  toolbar_no_card.xml  toolbar_photo.xml  video_media_controller.xml
app_filegallery/src/main/res/raw/: s_loading.json_lz4  s_waves.json_lz4  s_waves_end.json_lz4  theme_selected.json_lz4  waves_end.json_lz4
app_filegallery/src/main/res/values/: attrs.xml  strings.xml  styles.xml
app_filegallery/src/main/res/values-night/: styles.xml
app_filegallery/src/main/res/values-night-v31/: styles.xml
app_filegallery/src/main/res/values-ru/: strings.xml
app_filegallery/src/main/res/values-v31/: styles.xml
app_filegallery/src/main/res/xml/: file_paths.xml
camera2/: build.gradle  build.gradle.kts
fenrir_common/: build.gradle  build.gradle.kts
fenrir_common/src/main/res/layout/: dialog_about_us_content.xml
fenrir_common/src/main/res/raw/: auidio_no_cover.json_lz4  donater.json_lz4  donater_fire.json_lz4  end_list_balls.json_lz4  end_list_succes.json_lz4  end_list_wave.json_lz4  fenrir.json_lz4  (+8 more)
firebase-installations/: build.gradle  build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
image/: build.gradle  build.gradle.kts
image/src/main/: AndroidManifest.xml
material/: build.gradle  build.gradle.kts  changes.patch  patch.patch
native/: build.gradle  build.gradle.kts  ffmpeg.sh  okhttp.c  okhttp.patch
native/src/main/jni/: CMakeLists.txt  build_ffmpeg.sh  jni_call.cpp  zstd_kmp_jni.cpp  zxing_jni.cpp
native/src/main/jni/animation/: animation_jni.cpp  thorvg_jni.cpp  tvgGifEncoder.h
native/src/main/jni/animation/libyuv/include/libyuv/: convert.h  convert_from_argb.h  version.h
native/src/main/jni/animation/libyuv/source/: convert.cc  convert_from_argb.cc  planar_functions.cc  row_common.cc  row_neon64.cc
native/src/main/jni/animation/thorvg/inc/: thorvg.h
native/src/main/jni/animation/thorvg/src/loaders/lottie/: tvgLottieLoader.cpp  tvgLottieLoader.h  tvgLottieModel.cpp  tvgLottieModel.h  tvgLottieParser.cpp  tvgLottieParser.h
native/src/main/jni/animation/thorvg/src/loaders/svg/: tvgSvgLoader.cpp
native/src/main/jni/animation/thorvg/src/renderer/: config.h  tvgInitializer.cpp  tvgLoadModule.h  tvgLoader.h  tvgPicture.cpp  tvgPicture.h  tvgRender.h  tvgText.cpp
native/src/main/jni/audio/ffmpeg/: ffmpeg_jni.cpp
native/src/main/jni/audio/opus/: opus_jni.cc
native/src/main/jni/audio/opus/libopus/celt/arm/: celt_pitch_xcorr_arm-gnu.S_gnu.s  celt_pitch_xcorr_arm_gnu.s
native/src/main/jni/audio/taglib/: config.h
native/src/main/jni/audio/taglib/toolkit/: tzlib.cpp
native/src/main/jni/compress/zlib/arch/arm/: acle_intrins.h  adler32_neon.c  arm_features.c  crc32_armv8.c
native/src/main/jni/zxing/: StdGenerator.h  Version.h
other_tool/: Flame_140.aep  camera_src.txt
other_tool/android_studio_inspect/: Deprecated.xml  Inspect.xml  JoinDeclarationAssigment.xml
other_tool/compress_lz4/: compress_lz4.cpp  compress_lz4.sln  compress_lz4.slnx  compress_lz4.vcxproj
other_tool/getter-setter-fix-plugin-gradle/: build.gradle  build.gradle.kts  settings.gradle.kts
other_tool/getter-setter-fix-plugin-gradle/gradle/wrapper/: gradle-wrapper.properties
other_tool/kspcomplier/: build.gradle.kts
picasso3/: build.gradle  build.gradle.kts
preference/: build.gradle  build.gradle.kts
recyclerview/: build.gradle  build.gradle.kts
(+1149 files in other folders)
