cmake_minimum_required(VERSION 4.1.2 FATAL_ERROR)
project(fenrir_jni C CXX ASM)

if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    set(CMAKE_CXX_FLAGS "-std=c++23 -DANDROID -g -DDEBUG_PLATFORM")
    set(CMAKE_C_FLAGS "-std=c23 -w -DANDROID -D_LARGEFILE_SOURCE -g -DDEBUG_PLATFORM")
    set(OPTIMIZE_NORMAL "-O0")
    set(OPTIMIZE_FAST "-O0")
    set(SYM_VISIBILITY "")
else ()
    set(CMAKE_CXX_FLAGS "-std=c++23 -DANDROID -DFENRIR_NATIVE_LOG_DISABLED -ffunction-sections -fdata-sections -fmerge-all-constants")
    set(CMAKE_C_FLAGS "-std=c23 -w -DANDROID -DFENRIR_NATIVE_LOG_DISABLED -D_LARGEFILE_SOURCE -ffunction-sections -fdata-sections -fmerge-all-constants")
    set(OPTIMIZE_NORMAL "-Os")
    set(OPTIMIZE_FAST "-O3")
    set(SYM_VISIBILITY "-fvisibility=hidden")
endif ()
set(CMAKE_ASM_FLAGS "${CFLAGS} -x assembler-with-cpp")
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_C_STANDARD 23)

set(ffmpeg_location "$ENV{HOME}/ffmpeg")
set(ffmpeg_binaries "${ffmpeg_location}/android-libs/${ANDROID_ABI}")

foreach (ffmpeg_lib avutil swresample avcodec avformat swscale)
    set(ffmpeg_lib_filename lib${ffmpeg_lib}.a)
    set(ffmpeg_lib_file_path ${ffmpeg_binaries}/${ffmpeg_lib_filename})
    add_library(
            ${ffmpeg_lib}
            STATIC
            IMPORTED)
    set_target_properties(
            ${ffmpeg_lib} PROPERTIES
            IMPORTED_LOCATION
            ${ffmpeg_lib_file_path})
endforeach ()

add_library(thorvg STATIC
        animation/thorvg/src/renderer/cpu_engine/tvgSwFill.cpp
        animation/thorvg/src/renderer/cpu_engine/tvgSwImage.cpp
        animation/thorvg/src/renderer/cpu_engine/tvgSwMath.cpp
        animation/thorvg/src/renderer/cpu_engine/tvgSwMemPool.cpp
        animation/thorvg/src/renderer/cpu_engine/tvgSwPostEffect.cpp
        animation/thorvg/src/renderer/cpu_engine/tvgSwRaster.cpp
        animation/thorvg/src/renderer/cpu_engine/tvgSwRenderer.cpp
        animation/thorvg/src/renderer/cpu_engine/tvgSwRle.cpp
        animation/thorvg/src/renderer/cpu_engine/tvgSwShape.cpp
        animation/thorvg/src/renderer/cpu_engine/tvgSwStroke.cpp
        animation/thorvg/src/renderer/tvgAccessor.cpp
        animation/thorvg/src/renderer/tvgAnimation.cpp
        animation/thorvg/src/renderer/tvgCanvas.cpp
        animation/thorvg/src/renderer/tvgFill.cpp
        animation/thorvg/src/renderer/tvgInitializer.cpp
        animation/thorvg/src/renderer/tvgLoaderMgr.cpp
        animation/thorvg/src/renderer/tvgPaint.cpp
        animation/thorvg/src/renderer/tvgPicture.cpp
        animation/thorvg/src/renderer/tvgRender.cpp
        animation/thorvg/src/renderer/tvgSaver.cpp
        animation/thorvg/src/renderer/tvgScene.cpp
        animation/thorvg/src/renderer/tvgShape.cpp
        animation/thorvg/src/renderer/tvgTaskScheduler.cpp
        animation/thorvg/src/renderer/tvgText.cpp
        animation/thorvg/src/loaders/lottie/tvgLottieAnimation.cpp
        animation/thorvg/src/loaders/lottie/tvgLottieBuilder.cpp
        animation/thorvg/src/loaders/lottie/tvgLottieExpressions.cpp
        animation/thorvg/src/loaders/lottie/tvgLottieInterpolator.cpp
        animation/thorvg/src/loaders/lottie/tvgLottieLoader.cpp
        animation/thorvg/src/loaders/lottie/tvgLottieModel.cpp
        animation/thorvg/src/loaders/lottie/tvgLottieModifier.cpp
        animation/thorvg/src/loaders/lottie/tvgLottieParser.cpp
        animation/thorvg/src/loaders/lottie/tvgLottieParserHandler.cpp
        animation/thorvg/src/loaders/raw/tvgRawLoader.cpp
        animation/thorvg/src/loaders/svg/tvgSvgBuilder.cpp
        animation/thorvg/src/loaders/svg/tvgSvgCssStyle.cpp
        animation/thorvg/src/loaders/svg/tvgSvgLoader.cpp
        animation/thorvg/src/loaders/svg/tvgSvgPath.cpp
        animation/thorvg/src/loaders/svg/tvgSvgUtil.cpp
        animation/thorvg/src/loaders/svg/tvgXmlParser.cpp
        animation/thorvg/src/common/tvgColor.cpp
        animation/thorvg/src/common/tvgCompressor.cpp
        animation/thorvg/src/common/tvgMath.cpp
        animation/thorvg/src/common/tvgStr.cpp)

target_compile_options(thorvg PRIVATE
        -DTVG_STATIC -DBIG_ENDIAN_COLORS -fno-exceptions -ffast-math ${OPTIMIZE_NORMAL} -fno-rtti -fno-unwind-tables -fno-asynchronous-unwind-tables -Woverloaded-virtual -Wno-unused-parameter -Wno-nan-infinity-disabled ${SYM_VISIBILITY})
target_include_directories(thorvg PRIVATE
        animation/thorvg/inc
        animation/thorvg/src/renderer
        animation/thorvg/src/renderer/cpu_engine
        animation/thorvg/src/loaders/lottie
        animation/thorvg/src/loaders/raw
        animation/thorvg/src/loaders/svg
        animation/thorvg/src/common)

if (${ANDROID_ABI} STREQUAL "arm64-v8a" OR ${ANDROID_ABI} STREQUAL "armeabi-v7a")
    target_compile_definitions(thorvg PRIVATE RAPIDJSON_NEON)
else ()
    target_compile_definitions(thorvg PRIVATE RAPIDJSON_SSE2)
endif ()

#####################################################################
add_library(libyuv STATIC
        animation/libyuv/source/compare.cc
        animation/libyuv/source/compare_common.cc
        animation/libyuv/source/compare_gcc.cc
        animation/libyuv/source/compare_neon64.cc
        animation/libyuv/source/compare_neon.cc
        animation/libyuv/source/convert_argb.cc
        animation/libyuv/source/convert.cc
        animation/libyuv/source/convert_from_argb.cc
        animation/libyuv/source/convert_from.cc
        animation/libyuv/source/convert_jpeg.cc
        animation/libyuv/source/convert_to_argb.cc
        animation/libyuv/source/convert_to_i420.cc
        animation/libyuv/source/cpu_id.cc
        animation/libyuv/source/mjpeg_decoder.cc
        animation/libyuv/source/mjpeg_validate.cc
        animation/libyuv/source/planar_functions.cc
        animation/libyuv/source/rotate_any.cc
        animation/libyuv/source/rotate_argb.cc
        animation/libyuv/source/rotate.cc
        animation/libyuv/source/rotate_common.cc
        animation/libyuv/source/rotate_gcc.cc
        animation/libyuv/source/rotate_sme.cc
        animation/libyuv/source/rotate_lsx.cc
        animation/libyuv/source/rotate_neon64.cc
        animation/libyuv/source/rotate_neon.cc
        animation/libyuv/source/row_any.cc
        animation/libyuv/source/row_common.cc
        animation/libyuv/source/row_gcc.cc
        animation/libyuv/source/row_lasx.cc
        animation/libyuv/source/row_lsx.cc
        animation/libyuv/source/row_neon64.cc
        animation/libyuv/source/row_neon.cc
        animation/libyuv/source/row_rvv.cc
        animation/libyuv/source/row_sme.cc
        animation/libyuv/source/row_sve.cc
        animation/libyuv/source/scale_any.cc
        animation/libyuv/source/scale_argb.cc
        animation/libyuv/source/scale.cc
        animation/libyuv/source/scale_common.cc
        animation/libyuv/source/scale_gcc.cc
        animation/libyuv/source/scale_lsx.cc
        animation/libyuv/source/scale_neon64.cc
        animation/libyuv/source/scale_neon.cc
        animation/libyuv/source/scale_rgb.cc
        animation/libyuv/source/scale_rvv.cc
        animation/libyuv/source/scale_sme.cc
        animation/libyuv/source/scale_uv.cc
        animation/libyuv/source/video_common.cc)
target_compile_options(libyuv PRIVATE -ffast-math ${OPTIMIZE_NORMAL} -funroll-loops -fno-strict-aliasing -fno-math-errno ${SYM_VISIBILITY})
target_include_directories(libyuv PRIVATE animation/libyuv/include)
if (${ANDROID_ABI} STREQUAL "arm64-v8a")
    target_compile_options(libyuv PRIVATE -march=armv8-a+dotprod+i8mm -DLIBYUV_DISABLE_SVE -DLIBYUV_DISABLE_SME)
endif ()

#####################################################################
add_library(opus STATIC
        audio/opus/libopus/src/opus.c
        audio/opus/libopus/src/opus_decoder.c
        audio/opus/libopus/src/opus_encoder.c
        audio/opus/libopus/src/opus_multistream.c
        audio/opus/libopus/src/opus_multistream_encoder.c
        audio/opus/libopus/src/opus_multistream_decoder.c
        audio/opus/libopus/src/repacketizer.c
        audio/opus/libopus/src/qext_compare.c
        audio/opus/libopus/src/analysis.c
        audio/opus/libopus/src/extensions.c
        audio/opus/libopus/src/mlp.c
        audio/opus/libopus/src/mlp_data.c
        audio/opus/libopus/src/opus_projection_encoder.c
        audio/opus/libopus/src/opus_projection_decoder.c
        audio/opus/libopus/src/mapping_matrix.c
        audio/opus/libopus/silk/CNG.c
        audio/opus/libopus/silk/code_signs.c
        audio/opus/libopus/silk/init_decoder.c
        audio/opus/libopus/silk/decode_core.c
        audio/opus/libopus/silk/decode_frame.c
        audio/opus/libopus/silk/decode_parameters.c
        audio/opus/libopus/silk/decode_indices.c
        audio/opus/libopus/silk/decode_pulses.c
        audio/opus/libopus/silk/decoder_set_fs.c
        audio/opus/libopus/silk/dec_API.c
        audio/opus/libopus/silk/enc_API.c
        audio/opus/libopus/silk/encode_indices.c
        audio/opus/libopus/silk/encode_pulses.c
        audio/opus/libopus/silk/gain_quant.c
        audio/opus/libopus/silk/interpolate.c
        audio/opus/libopus/silk/LP_variable_cutoff.c
        audio/opus/libopus/silk/NLSF_decode.c
        audio/opus/libopus/silk/NSQ.c
        audio/opus/libopus/silk/NSQ_del_dec.c
        audio/opus/libopus/silk/PLC.c
        audio/opus/libopus/silk/shell_coder.c
        audio/opus/libopus/silk/tables_gain.c
        audio/opus/libopus/silk/tables_LTP.c
        audio/opus/libopus/silk/tables_NLSF_CB_NB_MB.c
        audio/opus/libopus/silk/tables_NLSF_CB_WB.c
        audio/opus/libopus/silk/tables_other.c
        audio/opus/libopus/silk/tables_pitch_lag.c
        audio/opus/libopus/silk/tables_pulses_per_block.c
        audio/opus/libopus/silk/VAD.c
        audio/opus/libopus/silk/control_audio_bandwidth.c
        audio/opus/libopus/silk/quant_LTP_gains.c
        audio/opus/libopus/silk/VQ_WMat_EC.c
        audio/opus/libopus/silk/HP_variable_cutoff.c
        audio/opus/libopus/silk/NLSF_encode.c
        audio/opus/libopus/silk/NLSF_VQ.c
        audio/opus/libopus/silk/NLSF_unpack.c
        audio/opus/libopus/silk/NLSF_del_dec_quant.c
        audio/opus/libopus/silk/process_NLSFs.c
        audio/opus/libopus/silk/stereo_LR_to_MS.c
        audio/opus/libopus/silk/stereo_MS_to_LR.c
        audio/opus/libopus/silk/check_control_input.c
        audio/opus/libopus/silk/control_SNR.c
        audio/opus/libopus/silk/init_encoder.c
        audio/opus/libopus/silk/control_codec.c
        audio/opus/libopus/silk/A2NLSF.c
        audio/opus/libopus/silk/ana_filt_bank_1.c
        audio/opus/libopus/silk/biquad_alt.c
        audio/opus/libopus/silk/bwexpander_32.c
        audio/opus/libopus/silk/bwexpander.c
        audio/opus/libopus/silk/debug.c
        audio/opus/libopus/silk/decode_pitch.c
        audio/opus/libopus/silk/inner_prod_aligned.c
        audio/opus/libopus/silk/lin2log.c
        audio/opus/libopus/silk/log2lin.c
        audio/opus/libopus/silk/LPC_analysis_filter.c
        audio/opus/libopus/silk/LPC_inv_pred_gain.c
        audio/opus/libopus/silk/table_LSF_cos.c
        audio/opus/libopus/silk/NLSF2A.c
        audio/opus/libopus/silk/NLSF_stabilize.c
        audio/opus/libopus/silk/NLSF_VQ_weights_laroia.c
        audio/opus/libopus/silk/pitch_est_tables.c
        audio/opus/libopus/silk/resampler.c
        audio/opus/libopus/silk/resampler_down2_3.c
        audio/opus/libopus/silk/resampler_down2.c
        audio/opus/libopus/silk/resampler_private_AR2.c
        audio/opus/libopus/silk/resampler_private_down_FIR.c
        audio/opus/libopus/silk/resampler_private_IIR_FIR.c
        audio/opus/libopus/silk/resampler_private_up2_HQ.c
        audio/opus/libopus/silk/resampler_rom.c
        audio/opus/libopus/silk/sigm_Q15.c
        audio/opus/libopus/silk/sort.c
        audio/opus/libopus/silk/sum_sqr_shift.c
        audio/opus/libopus/silk/stereo_decode_pred.c
        audio/opus/libopus/silk/stereo_encode_pred.c
        audio/opus/libopus/silk/stereo_find_predictor.c
        audio/opus/libopus/silk/stereo_quant_pred.c
        audio/opus/libopus/silk/LPC_fit.c
        audio/opus/libopus/silk/fixed/LTP_analysis_filter_FIX.c
        audio/opus/libopus/silk/fixed/LTP_scale_ctrl_FIX.c
        audio/opus/libopus/silk/fixed/corrMatrix_FIX.c
        audio/opus/libopus/silk/fixed/encode_frame_FIX.c
        audio/opus/libopus/silk/fixed/find_LPC_FIX.c
        audio/opus/libopus/silk/fixed/find_LTP_FIX.c
        audio/opus/libopus/silk/fixed/find_pitch_lags_FIX.c
        audio/opus/libopus/silk/fixed/find_pred_coefs_FIX.c
        audio/opus/libopus/silk/fixed/noise_shape_analysis_FIX.c
        audio/opus/libopus/silk/fixed/process_gains_FIX.c
        audio/opus/libopus/silk/fixed/regularize_correlations_FIX.c
        audio/opus/libopus/silk/fixed/residual_energy16_FIX.c
        audio/opus/libopus/silk/fixed/residual_energy_FIX.c
        audio/opus/libopus/silk/fixed/warped_autocorrelation_FIX.c
        audio/opus/libopus/silk/fixed/apply_sine_window_FIX.c
        audio/opus/libopus/silk/fixed/autocorr_FIX.c
        audio/opus/libopus/silk/fixed/burg_modified_FIX.c
        audio/opus/libopus/silk/fixed/k2a_FIX.c
        audio/opus/libopus/silk/fixed/k2a_Q16_FIX.c
        audio/opus/libopus/silk/fixed/pitch_analysis_core_FIX.c
        audio/opus/libopus/silk/fixed/vector_ops_FIX.c
        audio/opus/libopus/silk/fixed/schur64_FIX.c
        audio/opus/libopus/silk/fixed/schur_FIX.c
        audio/opus/libopus/celt/bands.c
        audio/opus/libopus/celt/celt.c
        audio/opus/libopus/celt/celt_encoder.c
        audio/opus/libopus/celt/celt_decoder.c
        audio/opus/libopus/celt/cwrs.c
        audio/opus/libopus/celt/entcode.c
        audio/opus/libopus/celt/entdec.c
        audio/opus/libopus/celt/entenc.c
        audio/opus/libopus/celt/kiss_fft.c
        audio/opus/libopus/celt/laplace.c
        audio/opus/libopus/celt/mathops.c
        audio/opus/libopus/celt/mdct.c
        audio/opus/libopus/celt/mini_kfft.c
        audio/opus/libopus/celt/modes.c
        audio/opus/libopus/celt/pitch.c
        audio/opus/libopus/celt/celt_lpc.c
        audio/opus/libopus/celt/quant_bands.c
        audio/opus/libopus/celt/rate.c
        audio/opus/libopus/celt/vq.c
        audio/opus/libopus/celt/arm/armcpu.c
        audio/opus/libopus/celt/arm/arm_celt_map.c
)
if (${ANDROID_ABI} STREQUAL "armeabi-v7a" OR ${ANDROID_ABI} STREQUAL "arm64-v8a")
    target_compile_definitions(opus PRIVATE
            OPUS_HAVE_RTCD OPUS_ARM_ASM)
    target_sources(opus PRIVATE
            audio/opus/libopus/celt/arm/celt_neon_intr.c
            audio/opus/libopus/celt/arm/pitch_neon_intr.c
            audio/opus/libopus/silk/arm/NSQ_neon.c
            audio/opus/libopus/silk/arm/arm_silk_map.c
            audio/opus/libopus/silk/arm/LPC_inv_pred_gain_neon_intr.c
            audio/opus/libopus/silk/arm/NSQ_del_dec_neon_intr.c
            audio/opus/libopus/silk/arm/biquad_alt_neon_intr.c
            audio/opus/libopus/silk/fixed/arm/warped_autocorrelation_FIX_neon_intr.c
    )
endif ()
target_include_directories(opus PRIVATE
        audio/opus/libopus/include
        audio/opus/libopus/silk
        audio/opus/libopus/silk/fixed
        audio/opus/libopus/celt
        audio/opus/libopus)
target_compile_options(opus PRIVATE
        -ffast-math ${OPTIMIZE_NORMAL} -funroll-loops -ffast-math -fno-strict-aliasing -fno-math-errno ${SYM_VISIBILITY})
set_target_properties(opus PROPERTIES
        ANDROID_ARM_MODE arm)

target_compile_definitions(opus PRIVATE
        OPUS_BUILD FIXED_POINT USE_ALLOCA restrict= __EMX__ HAVE_LRINT HAVE_LRINTF)

#####################################################################
add_library(common STATIC
        audio/ts/MpegTsBitStream.cpp
        audio/ts/MpegTsDemux.cpp
        audio/taglib/audioproperties.cpp
        audio/taglib/fileref.cpp
        audio/taglib/mpeg/id3v1/id3v1genres.cpp
        audio/taglib/mpeg/id3v1/id3v1tag.cpp
        audio/taglib/mpeg/id3v2/frames/attachedpictureframe.cpp
        audio/taglib/mpeg/id3v2/frames/chapterframe.cpp
        audio/taglib/mpeg/id3v2/frames/commentsframe.cpp
        audio/taglib/mpeg/id3v2/frames/eventtimingcodesframe.cpp
        audio/taglib/mpeg/id3v2/frames/generalencapsulatedobjectframe.cpp
        audio/taglib/mpeg/id3v2/frames/ownershipframe.cpp
        audio/taglib/mpeg/id3v2/frames/podcastframe.cpp
        audio/taglib/mpeg/id3v2/frames/popularimeterframe.cpp
        audio/taglib/mpeg/id3v2/frames/privateframe.cpp
        audio/taglib/mpeg/id3v2/frames/relativevolumeframe.cpp
        audio/taglib/mpeg/id3v2/frames/synchronizedlyricsframe.cpp
        audio/taglib/mpeg/id3v2/frames/tableofcontentsframe.cpp
        audio/taglib/mpeg/id3v2/frames/textidentificationframe.cpp
        audio/taglib/mpeg/id3v2/frames/uniquefileidentifierframe.cpp
        audio/taglib/mpeg/id3v2/frames/unknownframe.cpp
        audio/taglib/mpeg/id3v2/frames/unsynchronizedlyricsframe.cpp
        audio/taglib/mpeg/id3v2/frames/urllinkframe.cpp
        audio/taglib/mpeg/id3v2/id3v2extendedheader.cpp
        audio/taglib/mpeg/id3v2/id3v2footer.cpp
        audio/taglib/mpeg/id3v2/id3v2frame.cpp
        audio/taglib/mpeg/id3v2/id3v2framefactory.cpp
        audio/taglib/mpeg/id3v2/id3v2header.cpp
        audio/taglib/mpeg/id3v2/id3v2synchdata.cpp
        audio/taglib/mpeg/id3v2/id3v2tag.cpp
        audio/taglib/mpeg/mpegfile.cpp
        audio/taglib/mpeg/mpegheader.cpp
        audio/taglib/mpeg/mpegproperties.cpp
        audio/taglib/mpeg/xingheader.cpp
        audio/taglib/tag.cpp
        audio/taglib/tagunion.cpp
        audio/taglib/tagutils.cpp
        audio/taglib/toolkit/tbytevector.cpp
        audio/taglib/toolkit/tbytevectorlist.cpp
        audio/taglib/toolkit/tbytevectorstream.cpp
        audio/taglib/toolkit/tdebug.cpp
        audio/taglib/toolkit/tdebuglistener.cpp
        audio/taglib/toolkit/tfile.cpp
        audio/taglib/toolkit/tfilestream.cpp
        audio/taglib/toolkit/tiostream.cpp
        audio/taglib/toolkit/tpicturetype.cpp
        audio/taglib/toolkit/tpropertymap.cpp
        audio/taglib/toolkit/tstring.cpp
        audio/taglib/toolkit/tstringlist.cpp
        audio/taglib/toolkit/tvariant.cpp
        audio/taglib/toolkit/tversionnumber.cpp
        audio/taglib/toolkit/tzlib.cpp
        compress/lz4/lz4.c
        compress/zlib/arch/generic/adler32_c.c
        compress/zlib/arch/generic/adler32_fold_c.c
        compress/zlib/arch/generic/chunkset_c.c
        compress/zlib/arch/generic/compare256_c.c
        compress/zlib/arch/generic/crc32_braid_c.c
        compress/zlib/arch/generic/crc32_chorba_c.c
        compress/zlib/arch/generic/crc32_fold_c.c
        compress/zlib/arch/generic/slide_hash_c.c
        compress/zlib/adler32.c
        compress/zlib/compress.c
        compress/zlib/cpu_features.c
        compress/zlib/crc32.c
        compress/zlib/crc32_braid_comb.c
        compress/zlib/deflate.c
        compress/zlib/deflate_fast.c
        compress/zlib/deflate_huff.c
        compress/zlib/deflate_medium.c
        compress/zlib/deflate_quick.c
        compress/zlib/deflate_rle.c
        compress/zlib/deflate_slow.c
        compress/zlib/deflate_stored.c
        compress/zlib/functable.c
        compress/zlib/gzlib.c
        compress/zlib/gzread.c
        compress/zlib/gzwrite.c
        compress/zlib/infback.c
        compress/zlib/inflate.c
        compress/zlib/inftrees.c
        compress/zlib/insert_string.c
        compress/zlib/insert_string_roll.c
        compress/zlib/trees.c
        compress/zlib/uncompr.c
        compress/zlib/zutil.c
        compress/zstd/dictBuilder/fastcover.c
        compress/zstd/dictBuilder/cover.c
        compress/zstd/dictBuilder/zdict.c
        compress/zstd/dictBuilder/divsufsort.c
        compress/zstd/decompress/huf_decompress.c
        compress/zstd/decompress/zstd_decompress.c
        compress/zstd/decompress/zstd_ddict.c
        compress/zstd/decompress/zstd_decompress_block.c
        compress/zstd/common/xxhash.c
        compress/zstd/common/error_private.c
        compress/zstd/common/pool.c
        compress/zstd/common/fse_decompress.c
        compress/zstd/common/threading.c
        compress/zstd/common/debug.c
        compress/zstd/common/zstd_common.c
        compress/zstd/common/entropy_common.c
        compress/zstd/compress/zstdmt_compress.c
        compress/zstd/compress/zstd_fast.c
        compress/zstd/compress/zstd_compress_sequences.c
        compress/zstd/compress/zstd_lazy.c
        compress/zstd/compress/zstd_compress_literals.c
        compress/zstd/compress/hist.c
        compress/zstd/compress/zstd_double_fast.c
        compress/zstd/compress/huf_compress.c
        compress/zstd/compress/zstd_ldm.c
        compress/zstd/compress/zstd_opt.c
        compress/zstd/compress/zstd_preSplit.c
        compress/zstd/compress/zstd_compress_superblock.c
        compress/zstd/decompress/huf_decompress_amd64.S
        compress/zstd/compress/fse_compress.c
        compress/zstd/compress/zstd_compress.c
)

target_include_directories(common
        PRIVATE
        audio/taglib
        audio/taglib/mpeg
        audio/taglib/mpeg/id3v1
        audio/taglib/mpeg/id3v2
        audio/taglib/mpeg/id3v2/frames
        audio/taglib/toolkit
        audio/taglib/utf8
        audio/taglib/utf8/utf8
        compress/lz4
        compress/zlib
        compress/zlib/arch/arm
        compress/zlib/arch/generic
        compress/zstd
        compress/zstd/common
        compress/zstd/compress
        compress/zstd/decompress
        compress/zstd/dictBuilder)

target_compile_options(common PRIVATE
        ${OPTIMIZE_FAST} -DZSTD_MULTITHREAD -DZSTD_LEGACY_SUPPORT=0 -DHAVE_ZLIB -DHAVE_ATTRIBUTE_ALIGNED -DHAVE_BUILTIN_ASSUME_ALIGNED -DHAVE_BUILTIN_CTZ -DHAVE_BUILTIN_CTZLL -DHAVE_CPUID_GNU -DHAVE_VISIBILITY_HIDDEN -DHAVE_VISIBILITY_INTERNAL -DWITH_GZFILEOP -DWITH_OPTIM -DZLIBNG_NATIVE_API -D_LARGEFILE64_SOURCE -D__USE_LARGEFILE64 -DTAGLIB_STATIC -funroll-loops -fno-strict-aliasing -fno-math-errno -Wno-unused-parameter -Wno-unused-variable ${SYM_VISIBILITY})

if (${ANDROID_ABI} STREQUAL "arm64-v8a")
    target_compile_definitions(common PRIVATE ARM_FEATURES ARM_NEON ARM_CRC32 ARM_NEON_HASLD4 HAVE_SYS_AUXV_H)
    target_sources(common PRIVATE
            compress/zlib/arch/arm/adler32_neon.c
            compress/zlib/arch/arm/arm_features.c
            compress/zlib/arch/arm/chunkset_neon.c
            compress/zlib/arch/arm/compare256_neon.c
            compress/zlib/arch/arm/crc32_armv8.c
            compress/zlib/arch/arm/slide_hash_neon.c)
    target_compile_options(common PRIVATE -march=armv8-a+crc)
elseif (${ANDROID_ABI} STREQUAL "armeabi-v7a")
    target_compile_definitions(common PRIVATE ARM_FEATURES ARM_NEON ARM_NEON_HASLD4)
    target_sources(common PRIVATE
            compress/zlib/arch/arm/adler32_neon.c
            compress/zlib/arch/arm/arm_features.c
            compress/zlib/arch/arm/chunkset_neon.c
            compress/zlib/arch/arm/compare256_neon.c
            compress/zlib/arch/arm/crc32_armv8.c
            compress/zlib/arch/arm/slide_hash_neon.c)
else ()
    target_compile_definitions(common PRIVATE X86_FEATURES X86_SSE2 WITHOUT_CHORBA_SSE)
    target_sources(common PRIVATE
            compress/zlib/arch/x86/chorba_sse2.c
            compress/zlib/arch/x86/chunkset_sse2.c
            compress/zlib/arch/x86/compare256_sse2.c
            compress/zlib/arch/x86/slide_hash_sse2.c
            compress/zlib/arch/x86/x86_features.c)
endif ()

#####################################################################
add_library(zxing STATIC
        zxing/aztec/AZDecoder.cpp
        zxing/aztec/AZDetector.cpp
        zxing/aztec/AZEncoder.cpp
        zxing/aztec/AZHighLevelEncoder.cpp
        zxing/aztec/AZReader.cpp
        zxing/aztec/AZToken.cpp
        zxing/aztec/AZWriter.cpp
        zxing/datamatrix/DMBitLayout.cpp
        zxing/datamatrix/DMDecoder.cpp
        zxing/datamatrix/DMECEncoder.cpp
        zxing/datamatrix/DMReader.cpp
        zxing/datamatrix/DMVersion.cpp
        zxing/datamatrix/DMDataBlock.cpp
        zxing/datamatrix/DMDetector.cpp
        zxing/datamatrix/DMHighLevelEncoder.cpp
        zxing/datamatrix/DMSymbolInfo.cpp
        zxing/datamatrix/DMWriter.cpp
        zxing/libzueci/zueci.c
        zxing/maxicode/MCBitMatrixParser.cpp
        zxing/maxicode/MCDecoder.cpp
        zxing/maxicode/MCReader.cpp
        zxing/oned/ODCodabarReader.cpp
        zxing/oned/ODCode128Writer.cpp
        zxing/oned/ODCode93Writer.cpp
        zxing/oned/ODDataBarExpandedReader.cpp
        zxing/oned/ODEAN8Writer.cpp
        zxing/oned/ODReader.cpp
        zxing/oned/ODWriterHelper.cpp
        zxing/oned/ODCodabarWriter.cpp
        zxing/oned/ODCode39Reader.cpp
        zxing/oned/ODDXFilmEdgeReader.cpp
        zxing/oned/ODDataBarLimitedReader.cpp
        zxing/oned/ODITFReader.cpp
        zxing/oned/ODUPCAWriter.cpp
        zxing/oned/ODCode128Patterns.cpp
        zxing/oned/ODCode39Writer.cpp
        zxing/oned/ODDataBarCommon.cpp
        zxing/oned/ODDataBarReader.cpp
        zxing/oned/ODITFWriter.cpp
        zxing/oned/ODUPCEANCommon.cpp
        zxing/oned/ODCode128Reader.cpp
        zxing/oned/ODCode93Reader.cpp
        zxing/oned/ODDataBarExpandedBitDecoder.cpp
        zxing/oned/ODEAN13Writer.cpp
        zxing/oned/ODMultiUPCEANReader.cpp
        zxing/oned/ODUPCEWriter.cpp
        zxing/pdf417/PDFBarcodeValue.cpp
        zxing/pdf417/PDFCodewordDecoder.cpp
        zxing/pdf417/PDFDetectionResult.cpp
        zxing/pdf417/PDFDetector.cpp
        zxing/pdf417/PDFHighLevelEncoder.cpp
        zxing/pdf417/PDFModulusPoly.cpp
        zxing/pdf417/PDFScanningDecoder.cpp
        zxing/pdf417/ZXBigInteger.cpp
        zxing/pdf417/PDFBoundingBox.cpp
        zxing/pdf417/PDFDecoder.cpp
        zxing/pdf417/PDFDetectionResultColumn.cpp
        zxing/pdf417/PDFEncoder.cpp
        zxing/pdf417/PDFModulusGF.cpp
        zxing/pdf417/PDFReader.cpp
        zxing/pdf417/PDFWriter.cpp
        zxing/qrcode/QRBitMatrixParser.cpp
        zxing/qrcode/QRDataBlock.cpp
        zxing/qrcode/QRDetector.cpp
        zxing/qrcode/QRErrorCorrectionLevel.cpp
        zxing/qrcode/QRMaskUtil.cpp
        zxing/qrcode/QRReader.cpp
        zxing/qrcode/QRWriter.cpp
        zxing/qrcode/QRCodecMode.cpp
        zxing/qrcode/QRDecoder.cpp
        zxing/qrcode/QREncoder.cpp
        zxing/qrcode/QRFormatInformation.cpp
        zxing/qrcode/QRMatrixUtil.cpp
        zxing/qrcode/QRVersion.cpp
        zxing/Barcode.cpp
        zxing/BitMatrixIO.cpp
        zxing/GenericGFPoly.cpp
        zxing/MultiFormatReader.cpp
        zxing/ReedSolomonEncoder.cpp
        zxing/Utf.cpp
        zxing/BarcodeFormat.cpp
        zxing/BitSource.cpp
        zxing/ECI.cpp
        zxing/GlobalHistogramBinarizer.cpp
        zxing/MultiFormatWriter.cpp
        zxing/ResultPoint.cpp
        zxing/WhiteRectDetector.cpp
        zxing/BinaryBitmap.cpp
        zxing/CharacterSet.cpp
        zxing/Error.cpp
        zxing/GridSampler.cpp
        zxing/PerspectiveTransform.cpp
        zxing/TextDecoder.cpp
        zxing/WriteBarcode.cpp
        zxing/BitArray.cpp
        zxing/ConcentricFinder.cpp
        zxing/GTIN.cpp
        zxing/HRI.cpp
        zxing/ReadBarcode.cpp
        zxing/TextEncoder.cpp
        zxing/ZXingC.cpp
        zxing/BitMatrix.cpp
        zxing/Content.cpp
        zxing/GenericGF.cpp
        zxing/HybridBinarizer.cpp
        zxing/JSON.cpp
        zxing/LocalGrid.cpp
        zxing/ReedSolomonDecoder.cpp
        zxing/ZXingCpp.cpp
)

target_include_directories(zxing
        PRIVATE
        zxing
        zxing/aztec
        zxing/datamatrix
        zxing/libzueci
        zxing/maxicode
        zxing/oned
        zxing/pdf417
        zxing/qrcode
)

target_compile_options(zxing PRIVATE
        ${OPTIMIZE_FAST} -DZXING_INTERNAL -funroll-loops -fno-strict-aliasing -fno-math-errno -Wno-unused-parameter -Wno-unused-variable ${SYM_VISIBILITY})

#####################################################################
add_library(fenrir_jni
        SHARED
        jni_call.cpp
        animation/thorvg_jni.cpp
        animation/animation_jni.cpp
        audio/ffmpeg/to_mp4_audio_jni.cpp
        audio/ffmpeg/ffmpeg_jni.cpp
        audio/ts/mpegts_demux_jni.cpp
        audio/taglib/taglib_jni.cpp
        audio/opus/opus_jni.cc
        camerax/image_processing_util_jni.cpp
        camerax/surface_util_jni.cpp
        parcel_jni.cpp
        string_exist_jni.cpp
        file_utils_jni.cpp
        zstd_kmp_jni.cpp
        zxing_jni.cpp
)

target_include_directories(fenrir_jni
        PRIVATE
        ./
        animation/thorvg/inc
        animation/libyuv/include
        compress/lz4
        compress/zstd
        compress/zstd/common
        compress/zstd/compress
        compress/zstd/decompress
        compress/zstd/dictBuilder
        compress/zlib
        zxing
        zxing/qrcode
        audio/opus/libopus/include
        audio/taglib
        audio/taglib/mpeg
        audio/taglib/mpeg/id3v1
        audio/taglib/mpeg/id3v2
        audio/taglib/mpeg/id3v2/frames
        audio/taglib/toolkit
        ${ffmpeg_location})

target_compile_options(fenrir_jni PRIVATE
        ${OPTIMIZE_NORMAL} -funroll-loops -fno-strict-aliasing -fno-math-errno -Wno-unused-parameter -Wno-unused-variable)

target_link_libraries(fenrir_jni
        PRIVATE android
        PRIVATE jnigraphics
        PRIVATE log
        PRIVATE swscale
        PRIVATE avformat
        PRIVATE avcodec
        PRIVATE swresample
        PRIVATE avutil
        PRIVATE common
        PRIVATE thorvg
        PRIVATE libyuv
        PRIVATE opus
        PRIVATE zxing)

if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    target_link_options(fenrir_jni PRIVATE "-Wl,-z,max-page-size=16384,--build-id=none")
endif ()